tests/ui-msrv/include_value_wrong_size.stderr
error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> tests/ui-msrv/include_value_wrong_size.rs:12:25
   |
12 | const WRONG_SIZE: u64 = zerocopy::include_value!("../../testdata/include_value/data");
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: source type: `[u8; 4]` (32 bits)
   = note: target type: `u64` (64 bits)
   = note: this error originates in the macro `$crate::transmute` (in Nightly builds, run with -Z macro-backtrace for more info)
